# Tarefa0_Revisao

./: CMakeLists.txt  README.md  Tarefa0_Revisao.c  diagram.json  wokwi.toml
inc/: font.h  ssd1306.c  ssd1306.h
